# MelodyBox

./: Cargo.toml  README.md
client/: Cargo.toml  download.js  index.html
client/src/: lib.rs  main.rs
server/: Cargo.toml
server/src/: main.rs  musictag.rs  prestart.rs  router.rs
server/src/musapi/: downloader.rs  errors.rs  fetcher.rs  mod.rs
src/: downloader.rs  errors.rs  fetcher.rs  main.rs  structure.rs  ytmusic.rs
src/musapi/: downloader.rs  fetcher.rs  mod.rs
src/ytmusic/: downloader.rs  errors.rs  fetcher.rs  mod.rs
