[package]
name = "melodybox"
version = "0.1.0-beta"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
execute = "0.2.12"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.176", features = ["derive"] }
thiserror = { version = "1.0.44" }
tokio = { version = "1.29.1", features = ["full"] }
