[package]
name = "melodybox-client"
version = "0.1.0-beta"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
leptos = { version = "0.4.10", features = ["csr"] }
log = "0.4.20"
