[package]
name = "melodybox-server"
version = "0.1.0-beta"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
chrono = "0.4.26"
color-eyre = "0.6.2"
execute = "0.2.12"
id3 = "1.7.0"
log = "0.4.20"
once_cell = "1.18.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.176", features = ["derive"] }
serde_json = "1.0.104"
simple_logger = "4.2.0"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["full"] }
ulid = "1.0.1"

[profile.release]
opt-level = 3
